--- a/pages/day24.html
+++ b/pages/day24.html
@@ -1,18 +1,189 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 24</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <h1>Día 24</h1>
+      <h1>Día 24</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 24 se añadirá más adelante.</p>
+      <!-- 1. Isometría del deltoides anterior -->
+      <section>
+        <h2>1. Isometría del deltoides anterior — 10×10 s por lado</h2>
+        <img
+          src="../img/day24/1.1.jpg"
+          alt="Isometría del deltoides anterior: bloqueo del antebrazo y empuje hacia adelante"
+        />
+        <p>
+          Colócate de pie con una pierna adelantada para mayor estabilidad y el
+          brazo de trabajo ligeramente flexionado frente al cuerpo. Con la mano
+          contraria sujeta el antebrazo o la muñeca del brazo de trabajo creando
+          un bloqueo firme.
+        </p>
+        <p>
+          El brazo de trabajo intenta salir hacia adelante y ligeramente hacia
+          arriba, mientras la mano de apoyo no le permite avanzar ni un
+          milímetro. La tensión debe concentrarse en el deltoides anterior (parte
+          frontal del hombro). Mantén la contracción <strong>10 segundos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 10 repeticiones por cada lado.</p>
+      </section>
+
+      <!-- 2. Rotura en tres puntos -->
+      <section>
+        <h2>2. Rotura en tres puntos con toalla (3-6-3) — 10 ciclos</h2>
+        <img src="../img/day24/2.1.jpg" alt="Rotura con toalla al frente" />
+        <img
+          src="../img/day24/2.2.jpg"
+          alt="Rotura con toalla sobre la cabeza"
+        />
+        <img
+          src="../img/day24/2.3.jpg"
+          alt="Rotura con toalla detrás de la espalda"
+        />
+        <p>
+          Usa una toalla o cinta que no se estire. Enrolla en las muñecas
+          dejando aprox. 46 cm entre manos. Trabaja en tres posiciones: (1)
+          delante del cuerpo, (2) sobre la cabeza, (3) detrás de la espalda. En
+          cada punto: 3 s para entrar en tensión, 6 s de máxima fuerza (como si
+          quisieras romperla), 3 s para soltar.
+        </p>
+        <p><strong>Ejecución:</strong> 10 ciclos (en cada uno pasas por los 3 puntos).</p>
+      </section>
+
+      <!-- 3. Flexiones -->
+      <section>
+        <h2>3. Flexiones — 1×10</h2>
+        <img src="../img/day24/3.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Colócate en plancha con el cuerpo firme. Baja con control y sube fuerte.
+          Termina arriba <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 4. Repetición del ejercicio 1 -->
+      <section>
+        <h2>4. Isometría del deltoides anterior — 2×10 por lado (10 s)</h2>
+        <img
+          src="../img/day24/4.1.jpg"
+          alt="Isometría del deltoides anterior: repetición"
+        />
+        <p>
+          Misma técnica que en el ejercicio 1: bloqueo firme con la mano contraria
+          y empuje hacia adelante/ligeramente hacia arriba sin movimiento visible.
+          Mantén <strong>10 segundos</strong> por repetición.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones por cada lado.</p>
+      </section>
+
+      <!-- 5. Rotura en tres puntos (15) -->
+      <section>
+        <h2>5. Rotura en tres puntos con toalla (3-6-3) — 15 ciclos</h2>
+        <img src="../img/day24/5.1.jpg" alt="Rotura con toalla al frente" />
+        <img
+          src="../img/day24/5.2.jpg"
+          alt="Rotura con toalla sobre la cabeza"
+        />
+        <img
+          src="../img/day24/5.3.jpg"
+          alt="Rotura con toalla detrás de la espalda"
+        />
+        <p>
+          Misma técnica del ejercicio 2 (tres posiciones, 3-6-3). Mantén el esfuerzo
+          máximo en la fase de 6 segundos.
+        </p>
+        <p><strong>Ejecución:</strong> 15 ciclos (cada ciclo = 3 puntos).</p>
+      </section>
+
+      <!-- 6. Flexiones (2x10) -->
+      <section>
+        <h2>6. Flexiones — 2×10</h2>
+        <img src="../img/day24/6.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Plancha firme, descenso controlado y subida potente. Termina arriba
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 7. Isometría del deltoides anterior (3x10) -->
+      <section>
+        <h2>7. Isometría del deltoides anterior — 3×10 por lado (10 s)</h2>
+        <img
+          src="../img/day24/7.1.jpg"
+          alt="Isometría del deltoides anterior: 3 series"
+        />
+        <p>
+          Misma técnica del ejercicio 1. Mantén <strong>10 segundos</strong> por
+          repetición, sin balancear el cuerpo y sin encoger el cuello.
+        </p>
+        <p><strong>Ejecución:</strong> 3 series de 10 repeticiones por cada lado.</p>
+      </section>
+
+      <!-- 8. Rotura en tres puntos (20) -->
+      <section>
+        <h2>8. Rotura en tres puntos con toalla (3-6-3) — 20 ciclos</h2>
+        <img src="../img/day24/8.1.jpg" alt="Rotura con toalla al frente" />
+        <img
+          src="../img/day24/8.2.jpg"
+          alt="Rotura con toalla sobre la cabeza"
+        />
+        <img
+          src="../img/day24/8.3.jpg"
+          alt="Rotura con toalla detrás de la espalda"
+        />
+        <p>
+          Misma técnica (tres posiciones, 3-6-3). Mantén la forma y aprieta al máximo
+          en cada ciclo.
+        </p>
+        <p><strong>Ejecución:</strong> 20 ciclos (cada ciclo = 3 puntos).</p>
+      </section>
+
+      <!-- 9. Flexiones (2x10) -->
+      <section>
+        <h2>9. Flexiones — 2×10</h2>
+        <img src="../img/day24/9.1.jpg" alt="Flexiones clásicas en el suelo" />
+        <p>
+          Plancha firme, descenso controlado y subida potente. Termina arriba
+          <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 10-12. Bloque final al máximo -->
+      <section>
+        <h2>Bloque final — al máximo (hasta el agotamiento)</h2>
+        <p>
+          Después del ejercicio 9, repite estos 3 ejercicios a máxima intensidad,
+          hasta el agotamiento.
+        </p>
+
+        <h3>10. Isometría del deltoides anterior — al máximo</h3>
+        <p>
+          Mantén el esquema de 10 segundos por repetición y haz tantas repeticiones
+          como puedas (por cada lado) sin perder la tensión.
+        </p>
+
+        <h3>11. Rotura en tres puntos (3-6-3) — al máximo</h3>
+        <p>
+          Mantén el esquema 3-6-3 y haz tantos ciclos como puedas, pasando por los
+          3 puntos en cada ciclo.
+        </p>
+
+        <h3>12. Flexiones — al máximo</h3>
+        <p>
+          Haz una serie a máximo número de repeticiones con técnica limpia (sin
+          bloquear completamente los codos).
+        </p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
