--- a/pages/day25.html
+++ b/pages/day25.html
@@ -1,18 +1,283 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 25</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <h1>Día 25</h1>
+      <h1>Día 25</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 25 se añadirá más adelante.</p>
+      <!-- 1. Colgamiento parcial con apoyo en los pies -->
+      <section>
+        <h2>1. Colgamiento parcial con apoyo en los pies — 10×10 s</h2>
+        <img
+          src="../img/day25/1.1.jpg"
+          alt="Colgamiento parcial en barra con apoyo de los pies"
+        />
+        <p>
+          Agarra una barra o cualquier soporte sólido que no pueda romperse. No
+          cuelgues todo tu peso como en una dominada: deja parte del peso sobre
+          los pies para mantener un estiramiento seguro y controlado. Relaja los
+          hombros y permite que la columna se alargue de forma natural.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén <strong>10 segundos</strong> y repite
+          <strong>10 veces</strong>.
+        </p>
+      </section>
+
+      <!-- 2. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>2. Isometría para dorsal ancho detrás de la espalda — 10×10 s por lado</h2>
+        <img
+          src="../img/day25/2.1.jpg"
+          alt="Isometría para dorsal ancho con brazo detrás de la espalda (tracción hacia abajo)"
+        />
+        <p>
+          Ponte de pie y lleva el brazo de trabajo detrás de la espalda,
+          sujetando la muñeca o la mano con la otra mano. La mano de apoyo tira
+          del brazo <strong>hacia abajo</strong>, mientras que la zona bajo la
+          escápula (dorsal ancho) intenta oponerse a ese movimiento, como si
+          quisiera mantener el hombro en su sitio.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> Mantén la contracción
+          <strong>10 segundos</strong> y repite <strong>10 veces por cada lado</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Encogimientos escapulares en la barra -->
+      <section>
+        <h2>3. Encogimientos escapulares en la barra — 2×10</h2>
+        <img
+          src="../img/day25/3.1.jpg"
+          alt="Encogimientos escapulares en la barra (hombros abajo sin flexionar brazos)"
+        />
+        <p>
+          Cuelga de la barra con control (si hace falta, deja parte del peso en
+          los pies). Alterna un colgado relajado con un movimiento corto de
+          <strong>hombros hacia abajo</strong> (depresión escapular), sin doblar
+          los codos y sin balancearte.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 4. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>4. Isometría para dorsal ancho detrás de la espalda — 12×10 s por lado</h2>
+        <img
+          src="../img/day25/4.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (12 repeticiones por lado)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: la mano de apoyo tira del brazo
+          <strong>hacia abajo</strong> y el dorsal ancho se contrae para impedirlo,
+          sin movimiento visible del brazo.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 12 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 5. Encogimientos escapulares en la barra -->
+      <section>
+        <h2>5. Encogimientos escapulares en la barra — 2×12</h2>
+        <img
+          src="../img/day25/5.1.jpg"
+          alt="Encogimientos escapulares en la barra (2 series de 12)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 3: colgado controlado, brazos rectos,
+          sin balanceos. Alterna relajación y <strong>hombros hacia abajo</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 12 repeticiones.</p>
+      </section>
+
+      <!-- 6. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>6. Isometría para dorsal ancho detrás de la espalda — 15×10 s por lado</h2>
+        <img
+          src="../img/day25/6.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (15 repeticiones por lado)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: tracción del brazo
+          <strong>hacia abajo</strong> con bloqueo firme, torso estable y hombros
+          sin elevarse hacia las orejas.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 15 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 7. Colgamiento parcial con apoyo en los pies -->
+      <section>
+        <h2>7. Colgamiento parcial con apoyo en los pies — 2×15 (10 s)</h2>
+        <img
+          src="../img/day25/7.1.jpg"
+          alt="Colgamiento parcial con apoyo en los pies (2 series)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 1: apoyo en los pies para controlar la
+          carga, hombros relajados y columna larga.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 15 repeticiones de 10 segundos.</p>
+      </section>
+
+      <!-- 8. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>8. Isometría para dorsal ancho detrás de la espalda — 20×10 s por lado</h2>
+        <img
+          src="../img/day25/8.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (20 repeticiones por lado)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: la mano de apoyo tira
+          <strong>hacia abajo</strong>, el dorsal ancho se contrae para impedir el
+          movimiento, sin balanceos.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 20 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 9. Flexiones al fallo -->
+      <section>
+        <h2>9. Flexiones — al fallo</h2>
+        <img src="../img/day25/9.1.jpg" alt="Flexiones en el suelo" />
+        <p>
+          Colócate en plancha con el cuerpo firme. Baja con control y sube fuerte.
+          Termina arriba <strong>sin bloquear completamente los codos</strong>.
+          Respira con ritmo y evita hundirte en la zona lumbar.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie al máximo, hasta el agotamiento.</p>
+      </section>
+
+      <!-- 10. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>10. Isometría para dorsal ancho detrás de la espalda — 10×10 s por lado</h2>
+        <img
+          src="../img/day25/10.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (tracción hacia abajo)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: tracción del brazo
+          <strong>hacia abajo</strong> con bloqueo firme, sin giro del cuerpo.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 10 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 11. Hiperextensión isométrica en el suelo -->
+      <section>
+        <h2>11. Hiperextensión isométrica en el suelo — 10×10 s</h2>
+        <img
+          src="../img/day25/11.1.jpg"
+          alt="Hiperextensión en el suelo elevando pecho y piernas"
+        />
+        <p>
+          Acuéstate boca abajo. Manos detrás de la cabeza,
+          <strong>sin tirar del cuello</strong>. Piernas estiradas y activas.
+          Eleva simultáneamente <strong>el pecho y las piernas</strong>, creando
+          una contracción fuerte de la zona lumbar y los glúteos.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 10 repeticiones, manteniendo
+          <strong>10 segundos</strong> arriba en cada repetición.
+        </p>
+      </section>
+
+      <!-- 12. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>12. Isometría para dorsal ancho detrás de la espalda — 12×10 s por lado</h2>
+        <img
+          src="../img/day25/12.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (12 repeticiones por lado)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: la mano de apoyo tira
+          <strong>hacia abajo</strong> y el dorsal ancho lo impide, sin movimiento.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 12 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 13. Hiperextensión isométrica en el suelo -->
+      <section>
+        <h2>13. Hiperextensión isométrica en el suelo — 2×12 (10 s)</h2>
+        <img
+          src="../img/day25/13.1.jpg"
+          alt="Hiperextensión en el suelo (2 series)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 11: eleva pecho y piernas con control,
+          mantén la tensión sin rebotes y baja suave.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 2 series de 12 repeticiones, manteniendo
+          <strong>10 segundos</strong> arriba en cada repetición.
+        </p>
+      </section>
+
+      <!-- 14. Isometría para dorsal ancho detrás de la espalda -->
+      <section>
+        <h2>14. Isometría para dorsal ancho detrás de la espalda — 15×10 s por lado</h2>
+        <img
+          src="../img/day25/14.1.jpg"
+          alt="Isometría para dorsal ancho detrás de la espalda (15 repeticiones por lado)"
+        />
+        <p>
+          Misma técnica que en el ejercicio 2: tracción del brazo
+          <strong>hacia abajo</strong>, torso estable, hombros abajo.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 15 repeticiones por cada lado, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+      </section>
+
+      <!-- 15. Hiperextensión con pausa -->
+      <section>
+        <h2>15. Hiperextensión en el suelo con pausa — 2×15 (10 s)</h2>
+        <img
+          src="../img/day25/15.1.jpg"
+          alt="Hiperextensión en el suelo con pausa arriba"
+        />
+        <p>
+          Misma posición que en el ejercicio 11, pero aquí haces
+          <strong>una pausa arriba</strong> manteniendo la tensión (pecho y piernas
+          elevados) antes de bajar con control.
+        </p>
+        <p>
+          <strong>Ejecución:</strong> 2 series de 15 repeticiones, con pausa arriba
+          (estándar: <strong>10 segundos</strong>).
+        </p>
+      </section>
+
+      <!-- 16. Flexiones al fallo -->
+      <section>
+        <h2>16. Flexiones — al fallo</h2>
+        <img src="../img/day25/16.1.jpg" alt="Flexiones en el suelo (serie final)" />
+        <p>
+          Misma técnica que en el ejercicio 9: plancha firme, descenso controlado y
+          subida potente. Termina arriba <strong>sin bloquear completamente los codos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie al máximo, hasta el agotamiento.</p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
