--- a/pages/day26.html
+++ b/pages/day26.html
@@ -1,18 +1,200 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Día 26</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/styles.css" />
     <script src="../js/main.js" defer></script>
-</head>
-<body>
+  </head>
+
+  <body>
     <header>
-        <h1>Día 26</h1>
+      <h1>Día 26</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 26 se añadirá más adelante.</p>
+      <!-- 1. Solitary Thirty-one -->
+      <section>
+        <h2>1. “Tirón de almohada” bajo la barbilla — 1×10 (10 s)</h2>
+        <img src="../img/day26/1.1.jpg" alt="Almohada bajo la barbilla: tirón y resistencia" />
+        <p>
+          Coloca una almohada bajo la barbilla. Inclina la cabeza hacia delante
+          para atraparla entre la barbilla y el pecho.
+          Con las manos <strong>tira suavemente</strong> de la almohada “como si
+          quisieras sacarla”, pero resiste apretándola más fuerte al
+          <strong>presionar hacia abajo con la barbilla</strong>.
+          Mantén la tensión <strong>10 segundos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 2. Solitary Twenty-nine -->
+      <section>
+        <h2>2. Trasvase de agua con la boca — 2 litros</h2>
+        <img src="../img/day26/2.1.jpg" alt="Trasvase de agua con la boca entre recipientes" />
+        <p>
+          Necesitas <strong>dos recipientes</strong>. Llena uno con
+          <strong>agua fresca y fría</strong> (hoy: <strong>2 litros</strong>) y
+          añade <strong>un par de cucharadas de sal</strong>. Coloca ambos
+          recipientes uno al lado del otro.
+        </p>
+        <p>
+          Toma un buen trago (sin tragar), mueve la cabeza hacia el recipiente
+          vacío y <strong>escupe con fuerza</strong>. Importante:
+          <strong>no dejes que el agua se escurra</strong> sin control; debe salir
+          como un <strong>chorro</strong>.
+        </p>
+      </section>
+
+      <!-- 3. Solitary Thirty -->
+      <section>
+        <h2>3. Extensión + “mandíbula” y barbilla al pecho — 1×10</h2>
+        <img src="../img/day26/3.1.jpg" alt="Extensión desde rodillas con apoyo en talones" />
+        <img src="../img/day26/3.2.jpg" alt="Vuelta hacia delante: barbilla al pecho" />
+        <p>
+          Arrodíllate y siéntate sobre los pies. Reclina el torso hacia atrás y
+          apoya las manos en los talones (si tienes la espalda rígida, ve solo
+          hasta donde sea cómodo).
+        </p>
+        <p>
+          <strong>Parte A (mandíbula):</strong> en la posición de extensión,
+          abre y cierra la boca lo más amplio posible
+          <strong>con control, sin tirones</strong>.
+          Con el tiempo puedes <strong>aumentar el número de repeticiones</strong>.
+        </p>
+        <p>
+          <strong>Parte B (barbilla al pecho):</strong> desde esa misma posición,
+          lleva la barbilla al pecho y luego vuelve a la extensión.
+          Mantén la tensión <strong>10 segundos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 4. Solitary Thirty-two -->
+      <section>
+        <h2>4. Isometría de cuello con mano en la frente — 1×10 (10 s)</h2>
+        <img src="../img/day26/4.1.jpg" alt="Isometría de cuello: mano en la frente" />
+        <p>
+          Coloca <strong>una mano en la frente</strong> y empuja con la cabeza
+          contra la mano, mientras la mano resiste para que
+          <strong>no haya movimiento visible</strong>. Llega al punto de
+          <strong>máxima resistencia</strong> y mantén
+          <strong>10 segundos</strong>.
+        </p>
+        <p>
+          Mantén la espalda recta y <strong>no aguantes la respiración</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 5. Solitary Thirty-six -->
+      <section>
+        <h2>5. Círculos pequeños con almohada en la cabeza — 10 + 10</h2>
+        <img src="../img/day26/5.1.jpg" alt="Almohada en la cabeza contra un punto sólido" />
+        <p>
+          Busca un punto <strong>sólido</strong> donde puedas presionar
+          <strong>hacia arriba</strong> con una almohada sobre la cabeza
+          (por ejemplo, bajo el marco de una puerta). Aplica
+          <strong>solo la presión justa</strong> para mantener la almohada en su
+          sitio.
+        </p>
+        <p>
+          Mantén la <strong>cabeza quieta</strong> y mueve el cuerpo
+          (desde el cuello hacia abajo) en <strong>círculos muy pequeños</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 10 círculos en sentido horario + 10 en sentido antihorario.</p>
+      </section>
+
+      <!-- 6. Solitary Thirty-one -->
+      <section>
+        <h2>6. “Tirón de almohada” bajo la barbilla — 1×15 (10 s)</h2>
+        <img src="../img/day26/6.1.jpg" alt="Almohada bajo la barbilla: repetición" />
+        <p>
+          Misma técnica que en el ejercicio 1: sujeta la almohada entre la
+          barbilla y el pecho, tira con las manos “como si quisieras sacarla” y
+          resiste presionando con la barbilla.
+          Mantén <strong>10 segundos</strong>.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 15 repeticiones.</p>
+      </section>
+
+      <!-- 7. Solitary Twenty-nine -->
+      <section>
+        <h2>7. Trasvase de agua con la boca — 3 litros</h2>
+        <img src="../img/day26/7.1.jpg" alt="Trasvase de agua con la boca: volumen mayor" />
+        <p>
+          Igual que el ejercicio 2, pero hoy el volumen total es de
+          <strong>3 litros</strong>. Agua <strong>fresca y fría</strong> con
+          <strong>un par de cucharadas de sal</strong>. Escupe con fuerza:
+          <strong>no dejes que el agua se escurra</strong>.
+        </p>
+      </section>
+
+      <!-- 8. Solitary Thirty -->
+      <section>
+        <h2>8. Extensión + “mandíbula” y barbilla al pecho — 2×10</h2>
+        <img src="../img/day26/8.1.jpg" alt="Extensión desde rodillas: repetición" />
+        <img src="../img/day26/8.2.jpg" alt="Barbilla al pecho: repetición" />
+        <p>
+          Misma técnica que en el ejercicio 3. En extensión:
+          abre y cierra la boca <strong>con control, sin tirones</strong>.
+          Luego barbilla al pecho y vuelve, manteniendo
+          <strong>10 segundos</strong> en cada repetición.
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 9. Solitary Thirty-two -->
+      <section>
+        <h2>9. Isometría de cuello con mano en la frente — 2×10 (10 s)</h2>
+        <img src="../img/day26/9.1.jpg" alt="Isometría de cuello: repetición" />
+        <p>
+          Misma técnica que en el ejercicio 4: mano en la frente, empuja con la
+          cabeza hasta el punto de máxima resistencia y mantén
+          <strong>10 segundos</strong>.
+        </p>
+        <p>
+          Espalda recta y <strong>respira</strong> (no aguantes el aire).
+        </p>
+        <p><strong>Ejecución:</strong> 2 series de 10 repeticiones.</p>
+      </section>
+
+      <!-- 10. Solitary Thirty-six -->
+      <section>
+        <h2>10. Círculos pequeños con almohada en la cabeza — 5 + 5</h2>
+        <img src="../img/day26/10.1.jpg" alt="Círculos pequeños con almohada: 5 y 5" />
+        <p>
+          Misma técnica que en el ejercicio 5: presión ligera para fijar la
+          almohada, cabeza quieta y círculos muy pequeños con el cuerpo.
+        </p>
+        <p><strong>Ejecución:</strong> 5 círculos en sentido horario + 5 en sentido antihorario.</p>
+      </section>
+
+      <!-- 11. Solitary Thirty-two -->
+      <section>
+        <h2>11. Isometría de cuello con mano en la frente — 1×10 (10 s)</h2>
+        <img src="../img/day26/11.1.jpg" alt="Isometría de cuello: última serie" />
+        <p>
+          Misma técnica que en el ejercicio 4. Mantén
+          <strong>10 segundos</strong> por repetición, espalda recta y respiración
+          continua.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
+
+      <!-- 12. Solitary Thirty -->
+      <section>
+        <h2>12. Extensión + barbilla al pecho — 1×10</h2>
+        <img src="../img/day26/12.1.jpg" alt="Extensión desde rodillas: última serie" />
+        <img src="../img/day26/12.2.jpg" alt="Barbilla al pecho: última serie" />
+        <p>
+          Misma técnica que en el ejercicio 3: en extensión, movimiento
+          <strong>con control, sin tirones</strong>. Barbilla al pecho y vuelve,
+          manteniendo <strong>10 segundos</strong> en cada repetición.
+        </p>
+        <p><strong>Ejecución:</strong> 1 serie de 10 repeticiones.</p>
+      </section>
     </main>
-</body>
+  </body>
 </html>
