--- a/pages/day27.html
+++ b/pages/day27.html
@@ -11,8 +11,66 @@
     <header>
         <h1>Día 27</h1>
     </header>
+
     <main>
-        <p>El contenido para el día 27 se añadirá más adelante.</p>
-    </main>
-</body>
-</html>
+        <!-- Ajusta las rutas de imágenes si tu estructura de carpetas es diferente -->
+        <ol class="exercise-list">
+
+            <li class="exercise" id="e1">
+                <h2>1) Zancadas</h2>
+                <img src="../img/day27/1.1.jpg" alt="Zancadas">
+                <p>Da un paso amplio hacia delante y baja de forma controlada a una zancada (rodilla trasera cerca del suelo). Mantén el tronco estable, espalda neutra y la rodilla delantera alineada con el pie.</p>
+                <p><strong>Dosificación:</strong> 10 series por pierna.</p>
+            </li>
+
+            <li class="exercise" id="e2">
+                <h2>2) Elevación de pierna al frente (isométrico)</h2>
+                <img src="../img/day27/2.1.jpg" alt="Elevación de pierna al frente isométrica">
+                <p>De pie, manos en la cintura y tronco firme. Eleva una pierna recta al frente (pie en flexión) y mantén la posición sin balancearte. Baja con control y repite.</p>
+                <p><strong>Dosificación:</strong> 10 repeticiones por pierna, manteniendo 10 segundos en cada repetición.</p>
+            </li>
+
+            <li class="exercise" id="e3">
+                <h2>3) Saltos de estrella</h2>
+                <img src="../img/day27/3.1.jpg" alt="Saltos de estrella">
+                <p>Salta abriendo las piernas hacia los lados mientras subes los brazos por encima de la cabeza. Con otro salto vuelve a la posición inicial. Aterriza suave, ritmo controlado.</p>
+                <p><strong>Dosificación:</strong> 10 repeticiones.</p>
+            </li>
+
+            <li class="exercise" id="e4">
+                <h2>4) Sentadillas</h2>
+                <img src="../img/day27/4.1.jpg" alt="Sentadillas">
+                <p>Pies separados (ancho cómodo), puntas ligeramente hacia afuera. Baja y sube con control: caderas atrás, pecho abierto, espalda neutra. Rodillas siguen la línea de los pies y talones apoyados.</p>
+                <p><strong>Dosificación:</strong> 10 repeticiones.</p>
+            </li>
+
+            <li class="exercise" id="e5">
+                <h2>5) Zancadas con pausa isométrica</h2>
+                <img src="../img/day27/5.1.jpg" alt="Zancadas con pausa isométrica">
+                <p>Baja a una zancada profunda con el tronco estable. Mantén la rodilla delantera alineada con el pie. En la posición baja mantén la tensión y luego sube con control.</p>
+                <p><strong>Dosificación:</strong> 12 repeticiones por pierna, manteniendo 10 segundos en cada repetición.</p>
+            </li>
+
+            <li class="exercise" id="e6">
+                <h2>6) Elevación de pierna al frente (isométrico)</h2>
+                <img src="../img/day27/6.1.jpg" alt="Elevación de pierna al frente isométrica">
+                <p>De pie, manos en la cintura. Eleva una pierna recta al frente (pie en flexión) y mantén la posición sin balancearte. Baja con control y repite.</p>
+                <p><strong>Dosificación:</strong> 12 repeticiones por pierna, manteniendo 10 segundos en cada repetición.</p>
+            </li>
+
+            <li class="exercise" id="e7">
+                <h2>7) Saltos de estrella</h2>
+                <img src="../img/day27/7.1.jpg" alt="Saltos de estrella">
+                <p>Salta abriendo piernas y elevando brazos por encima de la cabeza; vuelve con otro salto a la posición inicial. Aterriza suave, ritmo controlado.</p>
+                <p><strong>Dosificación:</strong> 12 repeticiones.</p>
+            </li>
+
+            <li class="exercise" id="e8">
+                <h2>8) Sentadillas</h2>
+                <img src="../img/day27/8.1.jpg" alt="Sentadillas">
+                <p>Pies separados, puntas ligeramente hacia afuera. Baja y sube con control manteniendo la técnica: espalda neutra, pecho abierto, rodillas por la línea de los pies, talones apoyados.</p>
+                <p><strong>Dosificación:</strong> 12 repeticiones.</p>
+            </li>
+
+            <li class="exercise" id="e9">
+                <h2>9) Zancadas dinámicas (sin pausa)
