--- a/pages/day28.html
+++ b/pages/day28.html
@@ -1,18 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Día 28</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src="../js/main.js" defer></script>
+  <meta charset="UTF-8" />
+  <title>Día 28</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../css/styles.css" />
+  <script src="../js/main.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Día 28</h1>
-    </header>
-    <main>
-        <p>El contenido para el día 28 se añadirá más adelante.</p>
-    </main>
+  <header>
+    <h1>Día 28</h1>
+    <p>Elige <strong>UNA</strong> ruta para hoy: <strong>A</strong> (reto de flexiones) o <strong>B</strong> (rutina diaria de 8 básicos).</p>
+  </header>
+
+  <main>
+
+    <section>
+      <h2>Ruta A — Reto de flexiones (110)</h2>
+      <p>
+        Alterna <strong>caminata activa</strong> (o trote suave en el lugar) entre mini-series.
+        Haz la “pirámide” completa:
+      </p>
+      <ul>
+        <li><strong>Bajando:</strong> 10, 9, 8, 7, 6, 5, 4, 3, 2, 1</li>
+        <li><strong>Subiendo:</strong> 1, 2, 3, 4, 5, 6, 7, 8, 9, 10</li>
+      </ul>
+      <p><strong>Total:</strong> 110 flexiones.</p>
+
+      <h3>Progresión (días siguientes)</h3>
+      <p>
+        Cada día sube el <strong>número inicial</strong> en +1:
+        mañana empiezas en 11 (11→…→1→…→11), luego 12, etc.
+        Si te rompe demasiado, mete un día suave o descanso cuando sea necesario.
+      </p>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Ruta B — Rutina diaria (8 básicos)</h2>
+      <p>
+        Estos 8 ejercicios se hacen como rutina base. La idea es progresar con volumen y constancia.
+      </p>
+
+      <h3>Los 8 básicos (explicación corta)</h3>
+      <ol>
+        <li>
+          <strong>Handstand press-ups</strong> — flexiones en parada de manos (preferible con pared).
+          Si no es seguro para ti, <em>no lo hagas</em> o sustitúyelo por <strong>pike push-ups</strong>.
+        </li>
+        <li>
+          <strong>Normal press-ups</strong> — flexiones normales (cuerpo recto, abdomen tenso, rango completo).
+        </li>
+        <li>
+          <strong>Sit-ups</strong> — abdominales (subida del torso con control; sin tirar del cuello).
+        </li>
+        <li>
+          <strong>Squats</strong> — sentadillas (espalda neutra, control en bajada y subida).
+        </li>
+        <li>
+          <strong>Squat-thrusts</strong> — desde plancha/posición de flexión: pies “rana” (adelante) → pies atrás.
+          <strong>Sin salto vertical.</strong>
+        </li>
+        <li>
+          <strong>Burpees (sin flexión)</strong> — squat-thrust + <strong>salto vertical</strong>:
+          plancha → “rana” → salto arriba → “rana” → plancha.
+        </li>
+        <li>
+          <strong>Star jumps</strong> — “estrellitas” (jumping jacks).
+        </li>
+        <li>
+          <strong>Step-ups</strong> — subidas a un escalón/banquito, alternando piernas, controlando la bajada.
+        </li>
+      </ol>
+
+      <h3>Cómo se hace (HOY)</h3>
+      <ul>
+        <li><strong>1 set</strong> = 10 repeticiones.</li>
+        <li><strong>Hoy:</strong> 1 set de 10 repeticiones por cada uno de los 8 ejercicios (si el 1º no es seguro, sustitúyelo o sáltalo).</li>
+      </ul>
+
+      <h3>Objetivo</h3>
+      <p>
+        Llegar a <strong>10 sets</strong> por ejercicio manteniendo <strong>10 repeticiones por set</strong>
+        (eso es <strong>100 repeticiones</strong> de cada ejercicio).
+      </p>
+
+      <h3>Progresión (días siguientes)</h3>
+      <ul>
+        <li><strong>Semana a semana:</strong> añade <strong>+1 set</strong> a TODOS los ejercicios cuando el volumen actual ya sale con buena técnica.</li>
+        <li><strong>Ritmo:</strong> entrenas <strong>lunes a sábado</strong>; <strong>domingo</strong> descanso.</li>
+        <li><strong>Después de ~4 semanas estables:</strong> sube las repeticiones por set de <strong>10 a 15</strong> (por ejemplo, 10×15).</li>
+      </ul>
+    </section>
+
+    <hr />
+
+    <section>
+      <h2>Nota rápida</h2>
+      <p>
+        Prioridad: <strong>técnica limpia</strong> y progresión realista. Si aparece dolor articular agudo, ajusta o descansa.
+      </p>
+    </section>
+
+  </main>
 </body>
 </html>
